- fixed spacing in browser toolbar

--- a/static/css/browser.css
+++ b/static/css/browser.css
@@ -77,11 +77,11 @@
 }
 #middle_actions {
     display:inline-block;
-    margin-left:45px;
+    margin-left:35px;
 }
 #right_actions {
     display:inline-block;
-    margin-left:45px;
+    margin-left:35px;
 }
 #select_actions_title {
     display:block;
